# let_it_ride

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  let_it_ride_requirements.md  pyproject.toml
.claude/agents/: _base-reviewer.md  code-quality-reviewer.md  documentation-accuracy-reviewer.md  performance-reviewer.md  security-code-reviewer.md  test-coverage-reviewer.md
.claude/commands/: analyze-metrics.md  fix-pr.md  fix-review.md  issue.md  merge-pr.md  pr-review.md  review-pr.md
.claude/memories/: gh-pr-review-syntax.md  github-cli-pr-comments.md  metrics-logging-protocol.md  review-issue-matrix.md
.claude/references/: let-it-ride-game-rules.md
benchmarks/: __init__.py  benchmark_memory.py  benchmark_throughput.py  profile_hotspots.py
configs/: README.md  aggressive.yaml  basic_strategy.yaml  bonus_5_dollar.yaml  bonus_comparison.yaml  multi_seat_example.yaml  progressive_betting.yaml  sample_config.yaml
docs/: README.md  api.md  bonus_strategies.md  configuration.md  create_issues.sh  examples.md  implementation_todo.md  index.md  installation.md  json_schema.md  let_it_ride_implementation_plan.md  let_it_ride_requirements.md  output_formats.md  performance.md  poc_notes.md  quickstart.md  strategies.md  troubleshooting.md
results/: analysis.md
scratchpads/: INDEX.md  issue-10-hand-analysis-utilities.md  issue-100-test-quality-improvements.md  issue-106-rng-isolation-hand-testing.md  issue-11-yaml-configuration.md  issue-12-hand-state-machine.md  issue-13-basic-strategy.md  issue-138-table-config-cli.md  issue-14-baseline-strategies.md  issue-141-table-session-id.md  issue-142-multi-seat-stop-condition.md  issue-146-seat-level-statistics.md  issue-148-seat-aggregate-export.md  issue-15-custom-strategy.md  issue-16-game-engine.md  issue-17-bonus-strategies.md  issue-18-bankroll-tracker.md  issue-19-flat-betting-system.md  issue-20-progressive-betting.md  issue-21-session-state-management.md  issue-22-session-result-data-structures.md  issue-23-simulation-controller.md  issue-24-parallel-execution.md  issue-25-simulation-results-aggregation.md  issue-26-statistical-validation.md  issue-27-rng-quality-seeding.md  issue-28-core-statistics.md  issue-29-strategy-comparison.md  issue-30-csv-export.md  issue-31-json-export.md  issue-32-session-histogram.md  issue-33-bankroll-trajectory.md  issue-34-cli-entry-point.md  issue-35-console-output-formatting.md  issue-36-sample-configurations.md  issue-37-e2e-integration-tests.md  issue-38-performance-benchmarking.md  issue-4-project-scaffolding.md  issue-40-streak-based-bonus.md  issue-41-risk-of-ruin.md  (+17 more)
tests/: __init__.py  conftest.py
(+480 files in other folders)
